# backnet-backend

./: .env.example  .gitignore  Dockerfile  KNX Import Performance 38a5ce4fa2a1805c9024f6f5ecd943cb.md  README.md  REAL_DEVICES_REPORT.md  backend-api.md  docker-compose.yml  hvac.knxproj  llm.md  pyproject.toml  requirements-ml.txt  requirements.txt
config/: real_devices.yaml  simulation.yaml
config/devices/: ahu_01.yaml  co2_sensor_01.yaml  fcu_01.yaml  fcu_02.yaml  knx_blind_01.yaml  knx_light_01.yaml  knx_rtc_01.yaml  power_meter_01.yaml  temp_sensor_01.yaml  thermostat_01.yaml  zone_ctrl_01.yaml
docs/: api.md  architecture.md  discovery-production-analysis.md  getting-started.md  realtime-knx-connection.md  storage-benchmark-report.md  storage-optimization-plan.md
samples/: knx_ets_sample.xml
scripts/: verify_forecast.py
src/bacnet_lab/: __main__.py  bootstrap.py
src/bacnet_lab/adapters/: network_composite.py
src/bacnet_lab/application/: alarm_service.py  anomaly_feed.py  asset_service.py  device_service.py  discovery_service.py  forecast_scheduler.py  historian_service.py  pipeline_service.py  prediction_service.py  simulation_service.py
src/bacnet_lab/copilot/: __init__.py  llm.py  reasoning_db.py  service.py
src/bacnet_lab/domain/: enums.py  events.py
src/bacnet_lab/forecasting/: __init__.py  anomaly_detector.py  chronos_model.py  db.py  service.py
src/bacnet_lab/infrastructure/: config.py
src/bacnet_lab/ports/: discovery.py  timeseries.py  (+1 more)
tests/integration/: test_api.py  test_sqlite_repos.py  test_websocket.py
tests/unit/: test_anomaly_detector.py  test_asset_service.py  test_copilot_service.py  test_device_factory.py  test_ets_import.py  test_events.py  test_fleet_generator.py  test_knx_decode.py  test_modbus.py  test_prediction_service.py  test_webhook_subscriber.py
(+50 files in other folders)
