[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bacnet-lab"
version = "0.1.0"
description = "Open-source BACnet/IP network simulator with 7 virtual HVAC devices, REST API, web dashboard, and Docker deployment"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = [
    "bacnet",
    "bacnet-ip",
    "bacnet-simulator",
    "building-automation",
    "bms",
    "hvac",
    "simulator",
    "iot",
    "smart-building",
    "scada",
    "bac0",
    "bacpypes",
    "building-management",
    "virtual-device",
    "testing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
]
dependencies = [
    "BAC0>=24.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bacnet_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
